--- a/footer/footer.css
+++ b/footer/footer.css
@@ -1,8 +1,22 @@
+
 .footParent {
   display: flex;
   justify-content: space-between;
   width: 96%;
   margin: auto;
+}
+button{
+    cursor: pointer;
+}
+#upArrow,
+#downArrow,
+#upArrow1,
+#downArrow1,
+#upArrow2,
+#downArrow2 {
+  display: none;
+  cursor: pointer;
+  color: rgb(106, 101, 101);
 }
 
 .products {
@@ -74,13 +88,14 @@ footer {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   padding-top: 40px;
-  padding-left: 40px;
   margin: auto;
   gap: 10px;
   background-color: #e6e6e6;
   margin-top: -80px;
 }
-
+.section1 {
+  padding-left: 40px;
+}
 .footSection a {
   text-decoration: none;
   color: rgb(48, 46, 46);
@@ -98,7 +113,7 @@ footer {
   letter-spacing: 1.1px;
 }
 .section3 > input {
-  width: 80%;
+  width: 70%;
   height: 30px;
   padding: 8px 10px;
   font-size: 16px;
@@ -111,6 +126,7 @@ footer {
   padding: 15px;
   font-size: 16px;
   letter-spacing: 8px;
+  cursor: pointer;
 }
 
 .copyright {
@@ -120,10 +136,13 @@ footer {
   padding: 7.5px 0;
   padding-top: 30px;
   color: rgb(63, 60, 60);
+  /* border: 1px solid red; */
+  width: 100%;
 }
 .footerLogo > img {
   width: 18%;
   margin-bottom: 10px;
+  cursor: pointer;
 }
 /* media query */
 
@@ -134,6 +153,9 @@ footer {
     justify-content: space-between;
     width: 96%;
     margin: auto;
+  }
+  .section1 {
+    padding-left: 0px;
   }
   .products {
     margin: auto;
@@ -148,7 +170,7 @@ footer {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     text-align: center;
-    width: 96%;
+    width: 100%;
     margin: auto;
     gap: 10px;
   }
@@ -160,5 +182,17 @@ footer {
   .footerLogo > img {
     width: 50%;
     margin-bottom: 10px;
+  }
+
+  #downArrow,
+  #downArrow1,
+  #downArrow2 {
+    display: inline-block;
+  }
+
+  .aboutUs,
+  .socialHandle,
+  .policy {
+    display: none;
   }
 }
