--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,5 +1,8 @@
+.home{
+    padding-bottom: 50px;
+}
 .slideshow{
-    width: 1500px;
+    width: 100%;
     /* margin-top: 20px; */
 }
 
@@ -24,7 +27,7 @@
 }
 .shop2{
     display: flex;
-    /* width: 1500px; */
+    /* width: 100%; */
     margin-left: 100px;
     margin-top: 30px;
     /* border: 1px solid; */
@@ -77,7 +80,7 @@
     /* border: 2px solid red; */
 }
 .diva-1{
-    width: 200px;
+    width: 12%;
     height: 80%;
     /* border: 1px solid; */
     margin: 50px;
@@ -96,7 +99,8 @@
     color: red;
 }
 .btn1{
-    margin-top: 30px;
+    margin-top: 70px;
+
     width: 110px;
     font-size: small;
     padding: 10px;
@@ -114,7 +118,7 @@
         flex-direction: column;
     }
     .slideshow{
-        width: 700px;
+        width: 100%;
         margin: auto;
     }
     .shop-11{
