--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -4,7 +4,7 @@
 }
 .navbar{
      height: 120px;
-     width: 100%;
+     width: 1500px;
      position:fixed;
      background-color: white;
      /* border: 3px solid; */
