--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -23,7 +23,8 @@
     height: 100%;
     width: 60%;
     text-align: center;
-    margin-top: 10px;
+    margin-top: 12px;
+    margin-left: 100px;
     /* border: 1px solid green;   */
 }
 
