--- a/src/footer.css
+++ b/src/footer.css
@@ -134,7 +134,7 @@ footer {
   text-align: center;
   font-size: 12px;
   padding: 7.5px 0;
-  padding-top: 30px;
+  /* padding-top: 30px; */
   color: rgb(63, 60, 60);
   /* border: 1px solid red; */
   width: 100%;
@@ -142,6 +142,7 @@ footer {
 .footerLogo > img {
   width: 18%;
   margin-bottom: 10px;
+  margin: auto;
   cursor: pointer;
 }
 /* media query */
