--- a/src/pages/Imformation.css
+++ b/src/pages/Imformation.css
@@ -1,3 +1,13 @@
+input{
+    border: 1px solid black;
+    padding-left: 10px !important;
+    margin-right: 10px !important;
+}
+
+.shipping{
+    margin-top: 30px;
+}
+
 #top_nav{
     display: flex;
     margin-left: 10%;
@@ -91,14 +101,13 @@
             display: none;
         }
         #button_shipping{
-            margin-left: 50%;
-            width: 38%;
-            height: 8%;
+            padding: 15px;
             background-color: #000000;
             color: white;
             border-radius: 5px;
             cursor: pointer;
             font-family: sans-serif;
+            font-weight: 600;
             font-size: 15px;
         }
         
